# discord-linking

./: .dockerignore  .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: containers.yml  lint.yml
development/: Dockerfile  entrypoint.sh
development/mocked_integrations/: __init__.py
development/mocked_integrations/templates/: index.html
discord_linking/: app.py  auth0.py  database.py  discord.py  error.py  internal.py  nats.py  oauth.py  profiles.py  settings.py  tracing.py
discord_linking/dependencies/: __init__.py  profiles.py  registration.py
discord_linking/templates/: 404.html  500.html  _card_head.html  _layout.html  _macros.html  edit.html  error.html  index.html
discord_linking/templates/index/: _buttons.html  _head.html  _profile.html
infrastructure/: package.json
infrastructure/src/: index.ts
migrations/versions/: 61e85ed118c0_add_discord_link.py  fee0fd5b1965_add_users.py
