[tool.poetry]
name = "discord-linking"
version = "0.1.0"
description = ""
authors = ["Alex Krantz <alex@krantz.dev>"]
readme = "README.md"
packages = [{include = "discord_linking"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
Flask-SQLAlchemy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
